# GraphiX

./: .gitignore  CMakeLists.txt  README.md  camera.cpp  camera.h  canvas.cpp  canvas.h  main.cpp  maths.cpp  maths.h  mesh.cpp  mesh.h  triangle.cpp  triangle.h  vertex.h
include/: camera.h  canvas.h  light.h  maths.h  mesh.h  triangle.h  utils.h  vertex.h
src/: camera.cpp  canvas.cpp  light.cpp  maths.cpp  mesh.cpp  triangle.cpp  vertex.cpp
